<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DouFm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_about">关于</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash_activity_set_wifi">设置</string>
    <string name="splash_activity_quit">退出</string>
    <string name="title_activity_about">\n
        后台:dccrazyboy、叶落殇寒\n\n
        PC前端:亮子\n\n
        UI:爱笑的眼睛\n\n
        iOS版:船长\n\n
        Android版:心在飞翔、Acker、思聪、有风的日子、Yetwish_野鬼\n\n
        Android版反馈:2009chenqc@163.com</string>
    <string name="title_activity_sample">DouFM</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="title_activity_try_listen">DouFM试听</string>
    <string name="user_name">用户名</string>
    <string name="user_psw">密码</string>
    <string name="user_psw_confirm">确认密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="init_user_name">请输入用户名，长度小于20</string>
    <string name="init_user_psw">请输入密码，长度小于16</string>
    <string name="init_user_psw_confirm">请再次输入密码</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_user_history">UserHistoryActivity</string>
    <string name="title_activity_user_like">UserLikeActivity</string>

</resources>
